# -TERMINAL-PROGRAM-Calculator

./: .gitignore  CMakeLists.txt  README.md
assets/: draft.txt
src/: calculator.cpp  color.cpp  cursor_input.cpp  main.cpp  test  utils.cpp
src/headers/: calculator.hpp  color.hpp  cursor_input.hpp  utils.hpp
